# ct-rate-feature-benchmarks

./: .gitignore  BOTTLENECK_INVESTIGATION_PLAN.md  README.md  SCALING_STUDY_PLAN.md  pyproject.toml
configs/: README.md  config.yaml  config.yaml.example
configs/data/: default_features.yaml  default_features.yaml.example
configs/model/: linear_probe_visual.yaml  mlp_visual.yaml
logs/classification_experiments/: feature_classifier_FINAL_REPORT.md  feature_classifier_PHASE_2.md  feature_classifier_PHASE_3.md  feature_classifier_SCALING_STUDY_PLAN.md
logs/experiments/: EXPERIMENT_LOG.md  FINAL_REPORT.md  PHASE_0.md  PHASE_1.md  PHASE_2  PHASE_2.md  PHASE_3.md  SCALING_STUDY_PLAN.md  feature_classifier_PHASE_0.md  feature_classifier_PHASE_2.md  feature_classifier_PHASE_3.md
logs/feature_generation_experiments/: feature_generation_and_alignment_validation.md
scripts/: README.md  analyze_alignment.py  compare_per_class_bottlenecks.py  create_manual_label_files.py  create_volumename_csv.py  evaluate_and_aggregate_runs.py  generate_budget_manifests.py  generate_kfold_budget_manifests.py  optimize_thresholds.py  optuna_best_summary.py  optuna_mlp_search.py  phase3_stat_tests.py  plot_aggregated_runs.py  prepare_manifests.py  run_phase1_linear_probe_sweep.ps1  run_phase1_threshold_sweep.ps1  run_phase2_budget_sweep.ps1  run_phase3_manual_kfold_sweep.ps1
src/classification/: README.md  __init__.py  evaluate.py  loops.py  train.py
src/classification/data/: dataset.py
src/classification/models/: __init__.py  mlp.py
src/common/data/: __init__.py  dataset.py
src/common/eval/: __init__.py  checkpointing.py
src/common/train/: __init__.py  resume.py  wandb_logging.py
src/common/utils/: __init__.py  seed.py
src/ct_rate_benchmarks/: README.md  train.py
src/ct_rate_benchmarks/data/: __init__.py  dataset.py
src/ct_rate_benchmarks/models/: __init__,py  mlp.py
tests/: conftest.py
tests/integration/: test_training_pipeline.py
tests/unit/: test_checkpointing.py  test_evaluate.py  test_evaluate_and_aggregate_runs.py  test_feature_dataset.py  test_generate_kfold_budget_manifests.py  test_loops.py  test_optuna_scripts.py  test_resume.py  test_train_pipeline.py  test_wandb_logging.py
